--- a/less/images.less
+++ b/less/images.less
@@ -12,7 +12,7 @@
 // Generic blog icon
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/blog.svg>
+// <img src=https://cdn.digitallinguistics.io/img/blog.svg/>
 //
 // Styleguide Images.blog
 
@@ -22,7 +22,7 @@
 // Open book image. Useful as a documentation icon.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/book.open.svg>
+// <img src=https://cdn.digitallinguistics.io/img/book.open.svg/>
 //
 // Styleguide Images.book-open
 
@@ -32,7 +32,7 @@
 // A book lying on its side. Useful as a dictionary icon.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/book.side.svg>
+// <img src=https://cdn.digitallinguistics.io/img/book.side.svg/>
 //
 // Styleguide Images.book-side
 
@@ -41,7 +41,7 @@
 // A three-dimensional (but not 3D) box icon. This is the official icon of the DLx app.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/box.svg>
+// <img src=https://cdn.digitallinguistics.io/img/box.svg/>
 //
 // Styleguide Images.box
 
@@ -51,7 +51,7 @@
 // A magnifying glass hovering over some tiles. This is the official icon for the DLx data explorer.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/browse.svg>
+// <img src=https://cdn.digitallinguistics.io/img/browse.svg/>
 //
 // Styleguide Images.browse
 
@@ -61,7 +61,7 @@
 // A simplified color line-drawing of a browser. This is typically more useful as a thumbnail or small image than an icon.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/browser.svg>
+// <img src=https://cdn.digitallinguistics.io/img/browser.svg/>
 //
 // Styleguide Images.browser
 
@@ -71,7 +71,7 @@
 // An icon representing programming code, e.g. an area with raw JSON data, etc.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/code.svg>
+// <img src=https://cdn.digitallinguistics.io/img/code.svg/>
 //
 // Styleguide Images.code
 
@@ -81,7 +81,7 @@
 // A computer icon. Used for items concerning developers.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/computer.svg>
+// <img src=https://cdn.digitallinguistics.io/img/computer.svg/>
 //
 // Styleguide Images.computer
 
@@ -91,9 +91,29 @@
 // An icon representing CSS or CSS files. Part of a set of icons for different file types (e.g. JS, HTML).
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/css.svg>
+// <img src=https://cdn.digitallinguistics.io/img/css.svg/>
 //
 // Styleguide Images.css
+
+
+// dictionary-a-z.svg
+//
+// A red dictionary icon, with the letters A-Z on the cover.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/dictionary-a-z.svg/>
+//
+// Styleguide Images.dictionary-a-z
+
+
+// dictionary.svg
+//
+// A brown dictionary icon, with the letter D on the cover.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/dictionary.svg/>
+//
+// Styleguide Images.dictionary
 
 
 // headphones.svg
@@ -101,7 +121,7 @@
 // A headphones icon. For indicating audio.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/headphones.svg>
+// <img src=https://cdn.digitallinguistics.io/img/headphones.svg/>
 //
 // Styleguide Images.headphones
 
@@ -111,7 +131,7 @@
 // An icon representing HTML or HTML files. Part of a set of icons for different file types (e.g. CSS, JS).
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/html.svg>
+// <img src=https://cdn.digitallinguistics.io/img/html.svg/>
 //
 // Styleguide Images.html
 
@@ -121,7 +141,7 @@
 // A generic information icon that uses the letter "i" inside a circle. Used for indicating that additional information is available.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/info.svg>
+// <img src=https://cdn.digitallinguistics.io/img/info.svg/>
 //
 // Styleguide Images.info
 
@@ -131,7 +151,7 @@
 // The official open source JavaScript logo (the letters "JS" in black on a yellow background).
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/js-logo.svg>
+// <img src=https://cdn.digitallinguistics.io/img/js-logo.svg/>
 //
 // Styleguide Images.js-logo
 
@@ -141,7 +161,7 @@
 // An icon representing JavaScript or JavaScript files. Part of a set of icons for different file types (e.g. HTML, CSS).
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/js.svg>
+// <img src=https://cdn.digitallinguistics.io/img/js.svg/>
 //
 // Styleguide Images.js
 
@@ -151,7 +171,7 @@
 // An icon representing JSON or JSON files. Part of a set of icons for different file types (e.g. HTML, CSS).
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/json.svg>
+// <img src=https://cdn.digitallinguistics.io/img/json.svg/>
 //
 // Styleguide Images.json
 
@@ -161,7 +181,7 @@
 // A globe icon inside a speech bubble. This is used to represent the concept of language.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/language.svg>
+// <img src=https://cdn.digitallinguistics.io/img/language.svg/>
 //
 // Styleguide Images.language
 
@@ -171,7 +191,7 @@
 // A capital letter "A" followed by a lowercase letter "a". Used for indicating fonts and typography.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/letters.svg>
+// <img src=https://cdn.digitallinguistics.io/img/letters.svg/>
 //
 // Styleguide Images.letters
 
@@ -181,7 +201,7 @@
 // A generic 3-line menu icon.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/menu.svg>
+// <img src=https://cdn.digitallinguistics.io/img/menu.svg/>
 //
 // Styleguide Images.menu
 
@@ -191,7 +211,7 @@
 // A generic mute icon.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/mute.svg>
+// <img src=https://cdn.digitallinguistics.io/img/mute.svg/>
 //
 // Styleguide Images.mute
 
@@ -201,7 +221,7 @@
 // The GitHub octicon logo.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/octicon.svg>
+// <img src=https://cdn.digitallinguistics.io/img/octicon.svg/>
 //
 // Styleguide Images.octicon
 
@@ -211,7 +231,7 @@
 // Two pages stacked on top of one another. Useful for indicating documentation.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/pages.svg>
+// <img src=https://cdn.digitallinguistics.io/img/pages.svg/>
 //
 // Styleguide Images.pages
 
@@ -221,7 +241,7 @@
 // A generic triangular audio play button.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/play.svg>
+// <img src=https://cdn.digitallinguistics.io/img/play.svg/>
 //
 // Styleguide Images.play
 
@@ -231,7 +251,7 @@
 // A question mark icon. Used for indicating help text or resources.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/question.svg>
+// <img src=https://cdn.digitallinguistics.io/img/question.svg/>
 //
 // Styleguide Images.question
 
@@ -241,7 +261,7 @@
 // The Slack logo. Used for linking to the DLx Slack page.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/slack.svg>
+// <img src=https://cdn.digitallinguistics.io/img/slack.svg/>
 //
 // Styleguide Images.slack
 
@@ -251,7 +271,7 @@
 // A sort icon showing the letters "A" on top of "Z" and a downward arrow. Used for indicating ascending alphabetical sort.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/sort-alpha-asc.svg>
+// <img src=https://cdn.digitallinguistics.io/img/sort-alpha-asc.svg/>
 //
 // Styleguide Images.sort-alpha-asc
 
@@ -261,7 +281,7 @@
 // A sort icon showing the letters "Z" on top of "A" and a downward arrow. Used for indicating descending alphabetical sort.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/sort-alpha-desc.svg>
+// <img src=https://cdn.digitallinguistics.io/img/sort-alpha-desc.svg/>
 //
 // Styleguide Images.sort-alpha-desc
 
@@ -271,7 +291,7 @@
 // A price tag icon. Used for indicating tags / categories on items.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/tag.svg>
+// <img src=https://cdn.digitallinguistics.io/img/tag.svg/>
 //
 // Styleguide Images.tag
 
@@ -281,7 +301,7 @@
 // An image of a wug with the text "This is a wug" in handwritten letters.
 //
 // Markup:
-// <img class=icon-large src=https://cdn.digitallinguistics.io/img/this-is-a-wug.svg>
+// <img class=icon-large src=https://cdn.digitallinguistics.io/img/this-is-a-wug.svg/>
 //
 // Styleguide Images.this-is-a-wug
 
@@ -291,7 +311,7 @@
 // An image of a robotic wug (wugbot) with the text "This is a wugbot" in handwritten letters.
 //
 // Markup:
-// <img class=icon-large src=https://cdn.digitallinguistics.io/img/this-is-a-wugbot.svg>
+// <img class=icon-large src=https://cdn.digitallinguistics.io/img/this-is-a-wugbot.svg/>
 //
 // Styleguide Images.this-is-a-wugbot
 
@@ -301,7 +321,7 @@
 // A generic tools icon, showing a screwdriver and a wrench. Used for indicating tools in an application.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/tools.svg>
+// <img src=https://cdn.digitallinguistics.io/img/tools.svg/>
 //
 // Styleguide Images.tools
 
@@ -310,12 +330,22 @@
 // A colored tools icon, showing a screwdriver and wrench. Used for indicating tools in an application, when the black-and-white version (above) doesn't fit the styling.
 
 
+// trash.svg
+//
+// A generic trash can icon, used as a delete icon.
+//
+// Markup:
+// <img src=https://cdn.digitallinguistics.io/img/trash.svg/>
+//
+// Styleguide Images.trash
+
+
 // tunnel.svg
 //
 // The DLx tunnel logo, showing a nested set of JSON square brackets and curly brackets. Used as the official logo of DLx.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/tunnel.svg>
+// <img src=https://cdn.digitallinguistics.io/img/tunnel.svg/>
 //
 // Styleguide Images.tunnel
 
@@ -325,7 +355,7 @@
 // A generic user icon, showing the upper profile of a person.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/user.svg>
+// <img src=https://cdn.digitallinguistics.io/img/user.svg/>
 //
 // Styleguide Images.user
 
@@ -335,7 +365,7 @@
 // A combination of this-is-a-wug.svg and this-is-a-wugbot.svg. Together, this contrasts the wug and the wugbot (robotic wug) side by side, with the handwritten text, "This is a wug. This is a wugbot."
 //
 // Markup:
-// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wug-wugbot.svg>
+// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wug-wugbot.svg/>
 //
 // Styleguide Images.wug-wugbot
 
@@ -345,7 +375,7 @@
 // An image of a blue wug.
 //
 // Markup:
-// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wug.svg>
+// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wug.svg/>
 //
 // Styleguide Images.wug
 
@@ -355,7 +385,7 @@
 // An image of a gray wugbot (robotic wug).
 //
 // Markup:
-// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wugbot.svg>
+// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wugbot.svg/>
 //
 // Styleguide Images.wugbot
 
@@ -365,6 +395,6 @@
 // A circle with an X inside it. Used for indicating deletion or exiting.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/x-circle.svg>
+// <img src=https://cdn.digitallinguistics.io/img/x-circle.svg/>
 //
 // Styleguide Images.x-circle
